content/_generated-doc/3.6/config/quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config.adoc

:summaryTableId: quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_configuration]]link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.cache-prepared-statements]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.cache-prepared-statements[quarkus.datasource.reactive.cache-prepared-statements]`


[.description]
--
Whether prepared statements should be cached on the client side.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_CACHE_PREPARED_STATEMENTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_CACHE_PREPARED_STATEMENTS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.url]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.url[quarkus.datasource.reactive.url]`


[.description]
--
The datasource URLs.

If multiple values are set, this datasource will create a pool with a list of servers instead of a single server. The pool uses round-robin load balancing for server selection during connection establishment. Note that certain drivers might not accommodate multiple values in this context.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_URL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_URL+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.max-size]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.max-size[quarkus.datasource.reactive.max-size]`


[.description]
--
The datasource pool maximum size.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_MAX_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_MAX_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`20`


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.event-loop-size]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.event-loop-size[quarkus.datasource.reactive.event-loop-size]`


[.description]
--
When a new connection object is created, the pool assigns it an event loop.

When `++#++event-loop-size` is set to a strictly positive value, the pool assigns as many event loops as specified, in a round-robin fashion. By default, the number of event loops configured or calculated by Quarkus is used. If `++#++event-loop-size` is set to zero or a negative value, the pool assigns the current event loop to the new connection.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_EVENT_LOOP_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_EVENT_LOOP_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.trust-all]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.trust-all[quarkus.datasource.reactive.trust-all]`


[.description]
--
Whether all server certificates should be trusted.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_TRUST_ALL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_TRUST_ALL+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-pem]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-pem[quarkus.datasource.reactive.trust-certificate-pem]`


[.description]
--
PEM Trust config is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_TRUST_CERTIFICATE_PEM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_TRUST_CERTIFICATE_PEM+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-pem.certs]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-pem.certs[quarkus.datasource.reactive.trust-certificate-pem.certs]`


[.description]
--
Comma-separated list of the trust certificate files (Pem format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_TRUST_CERTIFICATE_PEM_CERTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_TRUST_CERTIFICATE_PEM_CERTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-jks]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-jks[quarkus.datasource.reactive.trust-certificate-jks]`


[.description]
--
JKS config is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_TRUST_CERTIFICATE_JKS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_TRUST_CERTIFICATE_JKS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-jks.path]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-jks.path[quarkus.datasource.reactive.trust-certificate-jks.path]`


[.description]
--
Path of the key file (JKS format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_TRUST_CERTIFICATE_JKS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_TRUST_CERTIFICATE_JKS_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-jks.password]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-jks.password[quarkus.datasource.reactive.trust-certificate-jks.password]`


[.description]
--
Password of the key file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_TRUST_CERTIFICATE_JKS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_TRUST_CERTIFICATE_JKS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-pfx]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-pfx[quarkus.datasource.reactive.trust-certificate-pfx]`


[.description]
--
PFX config is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_TRUST_CERTIFICATE_PFX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_TRUST_CERTIFICATE_PFX+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-pfx.path]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-pfx.path[quarkus.datasource.reactive.trust-certificate-pfx.path]`


[.description]
--
Path to the key file (PFX format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_TRUST_CERTIFICATE_PFX_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_TRUST_CERTIFICATE_PFX_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-pfx.password]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-pfx.password[quarkus.datasource.reactive.trust-certificate-pfx.password]`


[.description]
--
Password of the key.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_TRUST_CERTIFICATE_PFX_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_TRUST_CERTIFICATE_PFX_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-pem]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-pem[quarkus.datasource.reactive.key-certificate-pem]`


[.description]
--
PEM Key/cert config is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_KEY_CERTIFICATE_PEM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_KEY_CERTIFICATE_PEM+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-pem.keys]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-pem.keys[quarkus.datasource.reactive.key-certificate-pem.keys]`


[.description]
--
Comma-separated list of the path to the key files (Pem format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_KEY_CERTIFICATE_PEM_KEYS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_KEY_CERTIFICATE_PEM_KEYS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-pem.certs]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-pem.certs[quarkus.datasource.reactive.key-certificate-pem.certs]`


[.description]
--
Comma-separated list of the path to the certificate files (Pem format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_KEY_CERTIFICATE_PEM_CERTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_KEY_CERTIFICATE_PEM_CERTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-jks]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-jks[quarkus.datasource.reactive.key-certificate-jks]`


[.description]
--
JKS config is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_KEY_CERTIFICATE_JKS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_KEY_CERTIFICATE_JKS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-jks.path]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-jks.path[quarkus.datasource.reactive.key-certificate-jks.path]`


[.description]
--
Path of the key file (JKS format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_KEY_CERTIFICATE_JKS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_KEY_CERTIFICATE_JKS_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-jks.password]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-jks.password[quarkus.datasource.reactive.key-certificate-jks.password]`


[.description]
--
Password of the key file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_KEY_CERTIFICATE_JKS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_KEY_CERTIFICATE_JKS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-pfx]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-pfx[quarkus.datasource.reactive.key-certificate-pfx]`


[.description]
--
PFX config is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_KEY_CERTIFICATE_PFX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_KEY_CERTIFICATE_PFX+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-pfx.path]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-pfx.path[quarkus.datasource.reactive.key-certificate-pfx.path]`


[.description]
--
Path to the key file (PFX format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_KEY_CERTIFICATE_PFX_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_KEY_CERTIFICATE_PFX_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-pfx.password]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-pfx.password[quarkus.datasource.reactive.key-certificate-pfx.password]`


[.description]
--
Password of the key.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_KEY_CERTIFICATE_PFX_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_KEY_CERTIFICATE_PFX_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.reconnect-attempts]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.reconnect-attempts[quarkus.datasource.reactive.reconnect-attempts]`


[.description]
--
The number of reconnection attempts when a pooled connection cannot be established on first try.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_RECONNECT_ATTEMPTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_RECONNECT_ATTEMPTS+++`
endif::add-copy-button-to-env-var[]
--|int 
|`0`


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.reconnect-interval]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.reconnect-interval[quarkus.datasource.reactive.reconnect-interval]`


[.description]
--
The interval between reconnection attempts when a pooled connection cannot be established on first try.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_RECONNECT_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_RECONNECT_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`PT1S`


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.hostname-verification-algorithm]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.hostname-verification-algorithm[quarkus.datasource.reactive.hostname-verification-algorithm]`


[.description]
--
The hostname verification algorithm to use in case the server's identity should be checked. Should be HTTPS, LDAPS or an empty string.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_HOSTNAME_VERIFICATION_ALGORITHM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_HOSTNAME_VERIFICATION_ALGORITHM+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.idle-timeout]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.idle-timeout[quarkus.datasource.reactive.idle-timeout]`


[.description]
--
The maximum time a connection remains unused in the pool before it is closed.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_IDLE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_IDLE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`no timeout`


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.max-lifetime]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.max-lifetime[quarkus.datasource.reactive.max-lifetime]`


[.description]
--
The maximum time a connection remains in the pool, after which it will be closed upon return and replaced as necessary.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_MAX_LIFETIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_MAX_LIFETIME+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`no timeout`


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.shared]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.shared[quarkus.datasource.reactive.shared]`


[.description]
--
Set to true to share the pool among datasources. There can be multiple shared pools distinguished by name, when no specific name is set, the `__vertx.DEFAULT` name is used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_SHARED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_SHARED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.name]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.name[quarkus.datasource.reactive.name]`


[.description]
--
Set the pool name, used when the pool is shared among datasources, otherwise ignored.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.additional-properties-additional-properties]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.reactive.additional-properties-additional-properties[quarkus.datasource.reactive.additional-properties]`


[.description]
--
Other unspecified properties to be passed through the Reactive SQL Client directly to the database when new connections are initiated.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_ADDITIONAL_PROPERTIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_ADDITIONAL_PROPERTIES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.cache-prepared-statements]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.cache-prepared-statements[quarkus.datasource."datasource-name".reactive.cache-prepared-statements]`


[.description]
--
Whether prepared statements should be cached on the client side.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_CACHE_PREPARED_STATEMENTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_CACHE_PREPARED_STATEMENTS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.url]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.url[quarkus.datasource."datasource-name".reactive.url]`


[.description]
--
The datasource URLs.

If multiple values are set, this datasource will create a pool with a list of servers instead of a single server. The pool uses round-robin load balancing for server selection during connection establishment. Note that certain drivers might not accommodate multiple values in this context.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_URL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_URL+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.max-size]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.max-size[quarkus.datasource."datasource-name".reactive.max-size]`


[.description]
--
The datasource pool maximum size.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_MAX_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_MAX_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`20`


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.event-loop-size]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.event-loop-size[quarkus.datasource."datasource-name".reactive.event-loop-size]`


[.description]
--
When a new connection object is created, the pool assigns it an event loop.

When `++#++event-loop-size` is set to a strictly positive value, the pool assigns as many event loops as specified, in a round-robin fashion. By default, the number of event loops configured or calculated by Quarkus is used. If `++#++event-loop-size` is set to zero or a negative value, the pool assigns the current event loop to the new connection.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_EVENT_LOOP_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_EVENT_LOOP_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-all]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-all[quarkus.datasource."datasource-name".reactive.trust-all]`


[.description]
--
Whether all server certificates should be trusted.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_TRUST_ALL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_TRUST_ALL+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-pem]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-pem[quarkus.datasource."datasource-name".reactive.trust-certificate-pem]`


[.description]
--
PEM Trust config is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_TRUST_CERTIFICATE_PEM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_TRUST_CERTIFICATE_PEM+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-pem.certs]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-pem.certs[quarkus.datasource."datasource-name".reactive.trust-certificate-pem.certs]`


[.description]
--
Comma-separated list of the trust certificate files (Pem format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_TRUST_CERTIFICATE_PEM_CERTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_TRUST_CERTIFICATE_PEM_CERTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-jks]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-jks[quarkus.datasource."datasource-name".reactive.trust-certificate-jks]`


[.description]
--
JKS config is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_TRUST_CERTIFICATE_JKS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_TRUST_CERTIFICATE_JKS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-jks.path]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-jks.path[quarkus.datasource."datasource-name".reactive.trust-certificate-jks.path]`


[.description]
--
Path of the key file (JKS format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_TRUST_CERTIFICATE_JKS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_TRUST_CERTIFICATE_JKS_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-jks.password]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-jks.password[quarkus.datasource."datasource-name".reactive.trust-certificate-jks.password]`


[.description]
--
Password of the key file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_TRUST_CERTIFICATE_JKS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_TRUST_CERTIFICATE_JKS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-pfx]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-pfx[quarkus.datasource."datasource-name".reactive.trust-certificate-pfx]`


[.description]
--
PFX config is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_TRUST_CERTIFICATE_PFX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_TRUST_CERTIFICATE_PFX+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-pfx.path]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-pfx.path[quarkus.datasource."datasource-name".reactive.trust-certificate-pfx.path]`


[.description]
--
Path to the key file (PFX format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_TRUST_CERTIFICATE_PFX_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_TRUST_CERTIFICATE_PFX_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-pfx.password]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-pfx.password[quarkus.datasource."datasource-name".reactive.trust-certificate-pfx.password]`


[.description]
--
Password of the key.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_TRUST_CERTIFICATE_PFX_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_TRUST_CERTIFICATE_PFX_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-pem]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-pem[quarkus.datasource."datasource-name".reactive.key-certificate-pem]`


[.description]
--
PEM Key/cert config is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_KEY_CERTIFICATE_PEM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_KEY_CERTIFICATE_PEM+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-pem.keys]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-pem.keys[quarkus.datasource."datasource-name".reactive.key-certificate-pem.keys]`


[.description]
--
Comma-separated list of the path to the key files (Pem format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_KEY_CERTIFICATE_PEM_KEYS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_KEY_CERTIFICATE_PEM_KEYS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-pem.certs]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-pem.certs[quarkus.datasource."datasource-name".reactive.key-certificate-pem.certs]`


[.description]
--
Comma-separated list of the path to the certificate files (Pem format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_KEY_CERTIFICATE_PEM_CERTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_KEY_CERTIFICATE_PEM_CERTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-jks]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-jks[quarkus.datasource."datasource-name".reactive.key-certificate-jks]`


[.description]
--
JKS config is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_KEY_CERTIFICATE_JKS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_KEY_CERTIFICATE_JKS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-jks.path]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-jks.path[quarkus.datasource."datasource-name".reactive.key-certificate-jks.path]`


[.description]
--
Path of the key file (JKS format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_KEY_CERTIFICATE_JKS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_KEY_CERTIFICATE_JKS_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-jks.password]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-jks.password[quarkus.datasource."datasource-name".reactive.key-certificate-jks.password]`


[.description]
--
Password of the key file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_KEY_CERTIFICATE_JKS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_KEY_CERTIFICATE_JKS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-pfx]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-pfx[quarkus.datasource."datasource-name".reactive.key-certificate-pfx]`


[.description]
--
PFX config is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_KEY_CERTIFICATE_PFX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_KEY_CERTIFICATE_PFX+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-pfx.path]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-pfx.path[quarkus.datasource."datasource-name".reactive.key-certificate-pfx.path]`


[.description]
--
Path to the key file (PFX format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_KEY_CERTIFICATE_PFX_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_KEY_CERTIFICATE_PFX_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-pfx.password]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-pfx.password[quarkus.datasource."datasource-name".reactive.key-certificate-pfx.password]`


[.description]
--
Password of the key.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_KEY_CERTIFICATE_PFX_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_KEY_CERTIFICATE_PFX_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.reconnect-attempts]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.reconnect-attempts[quarkus.datasource."datasource-name".reactive.reconnect-attempts]`


[.description]
--
The number of reconnection attempts when a pooled connection cannot be established on first try.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_RECONNECT_ATTEMPTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_RECONNECT_ATTEMPTS+++`
endif::add-copy-button-to-env-var[]
--|int 
|`0`


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.reconnect-interval]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.reconnect-interval[quarkus.datasource."datasource-name".reactive.reconnect-interval]`


[.description]
--
The interval between reconnection attempts when a pooled connection cannot be established on first try.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_RECONNECT_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_RECONNECT_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`PT1S`


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.hostname-verification-algorithm]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.hostname-verification-algorithm[quarkus.datasource."datasource-name".reactive.hostname-verification-algorithm]`


[.description]
--
The hostname verification algorithm to use in case the server's identity should be checked. Should be HTTPS, LDAPS or an empty string.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_HOSTNAME_VERIFICATION_ALGORITHM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_HOSTNAME_VERIFICATION_ALGORITHM+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.idle-timeout]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.idle-timeout[quarkus.datasource."datasource-name".reactive.idle-timeout]`


[.description]
--
The maximum time a connection remains unused in the pool before it is closed.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_IDLE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_IDLE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`no timeout`


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.max-lifetime]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.max-lifetime[quarkus.datasource."datasource-name".reactive.max-lifetime]`


[.description]
--
The maximum time a connection remains in the pool, after which it will be closed upon return and replaced as necessary.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_MAX_LIFETIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_MAX_LIFETIME+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`no timeout`


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.shared]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.shared[quarkus.datasource."datasource-name".reactive.shared]`


[.description]
--
Set to true to share the pool among datasources. There can be multiple shared pools distinguished by name, when no specific name is set, the `__vertx.DEFAULT` name is used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_SHARED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_SHARED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.name]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.name[quarkus.datasource."datasource-name".reactive.name]`


[.description]
--
Set the pool name, used when the pool is shared among datasources, otherwise ignored.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.additional-properties-additional-properties]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.additional-properties-additional-properties[quarkus.datasource."datasource-name".reactive.additional-properties]`


[.description]
--
Other unspecified properties to be passed through the Reactive SQL Client directly to the database when new connections are initiated.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_ADDITIONAL_PROPERTIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE_ADDITIONAL_PROPERTIES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() javadoc] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
